tambah kode baru
menambahkan h1 dan alert baru

--- a/index.html
+++ b/index.html
@@ -2,11 +2,12 @@
 <html>
 
 <body>
-
+  <h1>Selamat datang di website saya</h1>
   <p>Before the script...</p>
 
   <script>
     alert( 'Hello, future!' );
+    alert( 'Have a nice day' );
   </script>
 
   <p>...After the script.</p>
