Mengganti dan Menambah script
Mengganti isi script yang sebelumnya 
<script>
    alert( 'Hello, World!' );
  </script> 
dan Menambah paragraf 
<p>Halo Cha, saya Alea cantik dan imut, saya harap kamu bertemu member treasure terutama Choi Hyunsuk.</p>

--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
   <p>Before the script...</p>
 
   <script>
-    alert( 'Hello, future!' );
+    alert( 'Hello, World!' );
   </script>
 
-  <p>...After the script.</p>
+  <p>Halo Cha, saya Alea cantik dan imut, saya harap kamu bertemu member treasure terutama Choi Hyunsuk.</p>
 
 </body>
 
